<resources>
    <string name="app_name">Terra</string>
    <string name="login_subtitle">Focus. Build your universe.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="home_title">Today</string>
    <string name="home_summary">Focus sessions and planet progress will appear here.</string>
    <string name="start_focus">Start Focus Session.</string>
</resources>